--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -16,7 +16,7 @@
 
     <main>
   <div class="container py-4">
-    <h1 class="mb-4 text-center">🛍️ Tu carrito</h1>
+    <h1 class="mb-4 text-center" id="carrito-title">Tu carrito</h1>
 
     <!-- Lista de productos -->
     <div id="carritoProductos" class="row gy-4">
@@ -26,10 +26,10 @@
     <!-- Resumen -->
     <div class="mt-5">
       <h3>Total a pagar: <span id="totalCarrito">$0.00</span></h3>
-      <div class="d-flex gap-2 mt-3">
-        <button id="btnVaciarCarrito" class="btn btn-outline-danger">Vaciar carrito</button>
-        <button id="btnContinuarCompra" class="btn btn-success">Continuar compra</button>
-      </div>
+      <div class="botones-finales resumen-carrito">
+  <button id="btnVaciarCarrito">Vaciar carrito</button>
+  <button id="btnContinuarCompra">Continuar compra</button>
+</div>
     </div>
   </div>
 
