más correcciones de estilos

--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -19,7 +19,7 @@
   <div id="navbar"></div>
 
   <main class="container py-5">
-    <h1 class="text-center mb-4">🧾 Resumen de tu pedido</h1>
+    <h1 class="text-center mb-4 checkout-title">Resumen de tu pedido</h1>
 
     <!-- Productos del carrito -->
     <div id="checkoutProductos" class="row gy-4 mb-4">
@@ -28,7 +28,7 @@
 
     <!-- Total y tiempo de preparación -->
     <div class="mb-5">
-      <h4>Total: <span id="checkoutTotal">$0.00</span></h4>
+      <h4><strong>Total:</strong> <span id="checkoutTotal">$0.00</span></h4>
       <p class="text-muted">⏱️ Tiempo estimado de preparación: 50 minutos</p>
     </div>
 
@@ -81,6 +81,7 @@
       <button type="submit" class="btn btn-primary mt-4">Finalizar compra</button>
     </form>
   </main>
+
 
   <footer id="footer" class="mt-5"></footer>
 
