--- a/pages/perfil-usuario.html
+++ b/pages/perfil-usuario.html
@@ -37,9 +37,10 @@
             <p><strong>Nombre:</strong> <span id="nombreUsuario">Cargando...</span></p>
             <p><strong>Email:</strong> <span id="emailUsuario">Cargando...</span></p>
             <div class="text-center mt-4">
-  <button id="cerrarSesionBtn" class="btn btn-danger">Cerrar sesión</button>
+  <button id="cerrarSesionBtn" class="btn btn-danger btn-perfil-estandar">Cerrar sesión</button>
 </div>
-            <a href="/pages/editar-perfil.html" class="btn btn-outline-primary w-100 mt-3">Editar perfil</a>
+           <a href="/pages/editar-perfil.html" class="btn btn-outline-primary btn-perfil-estandar mt-3">Editar perfil</a>
+
           </div>
         </div>
       </div>
