separacion de roles

--- a/pages/perfil-usuario.html
+++ b/pages/perfil-usuario.html
@@ -45,6 +45,9 @@
         </div>
       </div>
     </div>
+
+<div id="historialPedidos" class="mt-4"></div>
+
   </main>
 
   <!-- 🔗 Footer dinámico -->
