--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -29,7 +29,7 @@
     <!-- Total y tiempo de preparación -->
     <div class="mb-5">
       <h4><strong>Total:</strong> <span id="checkoutTotal">$0.00</span></h4>
-      <p class="text-muted">⏱️ Tiempo estimado de preparación: 50 minutos</p>
+      <p class="text-muted">Tiempo estimado de preparación: 50 minutos</p>
     </div>
 
     <!-- Formulario de datos del cliente -->
