--- a/pages/perfil-usuario.html
+++ b/pages/perfil-usuario.html
@@ -22,10 +22,10 @@
 </head>
 <body>
   
- <!-- 🔗 Navbar dinámico -->
+ <!-- Navbar dinámico -->
   <div id="navbar"></div>
 
-  <!-- 🧑‍💼 Contenido principal del perfil -->
+  <!-- Contenido principal del perfil -->
   <main class="container mt-5">
     <h2 class="text-center mb-4 title-perfil">Bienvenido a tu perfil</h2>
     
@@ -50,7 +50,7 @@
 
   </main>
 
-  <!-- 🔗 Footer dinámico -->
+  <!-- Footer dinámico -->
   <div id="footer" class="mt-5"></div>
 
 
