finalizacion de responsividad

--- a/pages/editar-perfil.html
+++ b/pages/editar-perfil.html
@@ -38,6 +38,10 @@
       <button type="submit" class="btn btn-primary w-100 mt-3">Guardar cambios</button>
       <a href="/pages/perfil-usuario.html" class="btn btn-secondary w-100 mt-2">Cancelar</a>
     </form>
+
+<!--Toast-->
+<div class="toast-container position-fixed bottom-0 end-0 p-3 toast-actualizacion-container" style="z-index: 1100;"></div>
+
   </main>
 
   <div id="footer" class="mt-5"></div>
