--- a/pages/registro.html
+++ b/pages/registro.html
@@ -115,6 +115,9 @@
         </p>
       </div>
     </div>
+
+    <!--Toast-->
+    <div class="toast-container position-fixed bottom-0 end-0 p-3 toast-registro-container" style="z-index: 1100;"></div>
     </main>
 
     <div id="footer"></div>
