--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -15,7 +15,7 @@
     <div id="navbar"></div>
 
     <main>
-  <div class="container py-4">
+  <div class="container py-4 carrito-container">
     <h1 class="mb-4 text-center" id="carrito-title">Tu carrito</h1>
 
     <!-- Lista de productos -->
@@ -55,6 +55,25 @@
 <!--Toast carrito vacío antes de continuar compra-->
 <div class="toast-container position-fixed bottom-0 end-0 p-3 toast-container-dinamica" style="z-index: 1100;">
   <!-- Aquí se insertan los toasts dinámicos -->
+</div>
+
+<!-- Modal vaciar carrito -->
+<div class="modal fade" id="modalConfirmarVaciar" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header bg-danger text-white">
+        <h5 class="modal-title">🧺 ¿Vaciar carrito?</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        Esta acción eliminará todos los productos. ¿Deseas continuar?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        <button id="confirmarVaciar" type="button" class="btn btn-danger">Vaciar</button>
+      </div>
+    </div>
+  </div>
 </div>
   </main>
 
