--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -36,7 +36,7 @@
     <h2 class="mb-3">Datos del cliente</h2>
     <form id="checkoutForm" novalidate>
       <div class="row">
-        <div class="col-md-6 mb-3">
+        <div class="col-md-6 col-12 mb-3">
           <label for="nombre" class="form-label">Nombre</label>
           <input type="text" class="form-control" id="nombre" required>
           <div class="invalid-feedback">Campo obligatorio.</div>
