--- a/pages/login.html
+++ b/pages/login.html
@@ -91,6 +91,9 @@
         </div>
       </div>
     </div>
+
+    <!-- Toast -->
+    <div class="toast-container position-fixed bottom-0 end-0 p-3 toast-login-container"></div>
 </main>
     <!-- FOOTER -->
     <div id="footer"></div>
