--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     </div>
 
-    <!-- ✅ Botón único, centrado al fondo -->
+    <!-- Botón único, centrado al fondo -->
     <a
       href="/pages/menu.html"
       class="general-green-button position-absolute bottom-0 start-50 translate-middle-x mb-3 z-3"
