index corregido de nuevo

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                   <div
                     class="carousel-caption-fixed position-absolute top-50 start-50 translate-middle text-center"
                   >
-                    <h2 class="text-carousel2">¡Conoce nuestra historia!</h2>
+                    <h2 class="text-carousel2">¡Conoce nuestra historia aquí!</h2>
                   </div>
 
                   <div
